--- a/Vectorization.ipynb
+++ b/Vectorization.ipynb
@@ -6,7 +6,7 @@
       "name": "Vectorization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPt7ZtljRaCCFF3VXDXP2e3",
+      "authorship_tag": "ABX9TyMVqnHjXHc8LMdIq5kxKou8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,6 +80,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jmceEmE4Z7ZY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that vector calculations are significantly fast.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZOiNq_INYSdh",
@@ -108,6 +118,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "luFYXWGOZ4kv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that for loop take a long time"
       ]
     },
     {
